routes/fitness-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fitness-route 
  namespace: fitness-ns
spec:
  parentRefs:
    - name: kgateway
      namespace: gateway-system
  rules:
    - matches: 
        - path:
            type: PathPrefix
            value: /fitness
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: fitness-tracker-service
          port: 80
