routes/hospital-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hospital-route 
  namespace: hospital-ns
spec:
  parentRefs:
    - name: kgateway
      namespace: gateway-system
  rules:
    - matches: 
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hospital-service
          port: 80
