routes/retail-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: retail-route 
  namespace: retail-ns
spec:
  parentRefs:
    - name: kgateway
      namespace: gateway-system
  rules:
    - matches: 
        - path:
            type: PathPrefix
            value: /retail
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: capsule-service
          port: 80
